# rewind-viewer

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: linux.yml  windows.yml
clients/: README.md  protocol_description.md
clients/c++/: README.md  RewindClient.h
clients/csharp/: RewindClient.cs
clients/golang/: rewind_client.go
clients/java/: RewindClient.java
clients/kotlin/: RewindClient.kt
clients/old_version/rust/: rewind_client.rs
clients/python3/: RewindClient.py
clients/ruby/: rewind_client.rb
clients/rust/: rewind_client.rs
clients/swift/: RewindClient.swift
cmake/: LoadDependency.cmake  RequireLibrary.cmake  utils.cmake
resources/shaders/: circle.frag  circle.vert  lines.frag  lines.vert  simple.vert  textured.frag  uniform_color.frag
resources/shaders2/: circle2.frag  circle2.geom  circle2.vert  lines2.frag
src/: CMakeLists.txt  main.cpp  version.h
src/cgutils/: Camera.cpp  Camera.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  opengl.h  utils.cpp  utils.h
src/common/: Spinlock.cpp  Spinlock.h  logger.h
src/imgui_impl/: imgui_impl_glfw_gl3.cpp  imgui_impl_opengl3.h  imgui_widgets.cpp  imgui_widgets.h  style.h
src/net/: NetListener.cpp  NetListener.h  PrimitiveType.cpp  PrimitiveType.h  ProtoHandler.cpp  ProtoHandler.h
src/net/json_handler/: JsonHandler.cpp  JsonHandler.h
src/shaders/: circle.frag  circle.vert  lines.vert  simple.frag  simple.vert
src/viewer/: Config.cpp  Config.h  Frame.cpp  Frame.h  FrameEditor.cpp  FrameEditor.h  NetListener.cpp  NetListener.h  PlaybackController.cpp  PlaybackController.h  Popup.cpp  Popup.h  Primitives.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShaderCollection.cpp  ShaderCollection.h  UIController.cpp  UIController.h
